MyPL/tests/negative/err_unbalanced_paren.logic
# Negative: missing close paren
parent(bat, bold.
